--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 </header>
     <nav class="navbar navbar-expand-lg" id="siteNav">
     <div class="container">
-        <a class="navbar-brand pl-3"><img src="./img/brand-logo.png"></a>
+        <a class="navbar-brand pl-3" href="https://arman-aleksanyan.github.io/corpon/"><img src="./img/brand-logo.png"></a>
         <div class="navbar-toggler" data-toggle="collapse" data-target="#navbarNav"
              aria-controls="navbarNav"
              aria-expanded="false"
@@ -48,12 +48,12 @@
         </div>
         <div class="collapse navbar-collapse pr-lg-3" id="navbarNav">
             <ul class="navbar-nav">
-                <li class="nav-item"><a class="nav-link" href="/">HOME</a></li>
-                <li class="nav-item"><a class="nav-link" href="/about">ABOUT</a></li>
-                <li class="nav-item"><a class="nav-link" href="/portfolio">PORTFOLIO</a></li>
-                <li class="nav-item"><a class="nav-link" href="/testimonials">TESTIMONIALS</a></li>
-                <li class="nav-item"><a class="nav-link" href="/team">OUR TEAM</a></li>
-                <li class="nav-item"><a class="nav-link" href="/contact">CONTACTS</a></li>
+                <li class="nav-item"><a class="nav-link" href="https://arman-aleksanyan.github.io/corpon/">HOME</a></li>
+                <li class="nav-item"><a class="nav-link" href="https://arman-aleksanyan.github.io/corpon/about">ABOUT</a></li>
+                <li class="nav-item"><a class="nav-link" href="https://arman-aleksanyan.github.io/corpon/portfolio">PORTFOLIO</a></li>
+                <li class="nav-item"><a class="nav-link" href="https://arman-aleksanyan.github.io/corpon/testimonials">TESTIMONIALS</a></li>
+                <li class="nav-item"><a class="nav-link" href="https://arman-aleksanyan.github.io/corpon/team">OUR TEAM</a></li>
+                <li class="nav-item"><a class="nav-link" href="https://arman-aleksanyan.github.io/corpon/contact">CONTACTS</a></li>
             </ul>
         </div>
     </div>
@@ -74,7 +74,7 @@
                             wouldn’t you want to make sure you’re monitoring what people are posting on social networks?
                             Especially if the demographic of your audience falls in that age range.
                         </p>
-                        <button class="transparent-white-button"  onclick="window.location.href='/about'"
+                        <button class="transparent-white-button"  onclick="window.location.href='https://arman-aleksanyan.github.io/corpon/about'"
                         >
                             Read More
                         </button>
@@ -91,7 +91,7 @@
                             wouldn’t you want to make sure you’re monitoring what people are posting on social networks?
                             Especially if the demographic of your audience falls in that age range.
                         </p>
-                        <button class="transparent-white-button"  onclick="window.location.href='/about'"
+                        <button class="transparent-white-button"  onclick="window.location.href='https://arman-aleksanyan.github.io/corpon/about'"
                         >
                             Read More
                         </button>
@@ -141,7 +141,7 @@
                                 Harvard Business School Collection
                             </p></li>
                     </ul>
-                    <button class="transparent-black-button"  onclick="window.location.href='/about'"
+                    <button class="transparent-black-button"  onclick="window.location.href='https://arman-aleksanyan.github.io/corpon/about'"
                     >
                         more details
                     </button>
@@ -208,7 +208,7 @@
             <p class="section-info">
                 Start with this demo now or check out the others to choose what you need.
             </p>
-            <button class="transparent-white-button"  onclick="window.location.href='/services'"
+            <button class="transparent-white-button"  onclick="window.location.href='https://arman-aleksanyan.github.io/corpon/services'"
             >
                 read more
             </button>
@@ -497,7 +497,7 @@
                                 </h3>
                             </li>
                         </ul>
-                        <button class="transparent-black-button"  onclick="window.location.href='/contact'"
+                        <button class="transparent-black-button"  onclick="window.location.href='https://arman-aleksanyan.github.io/corpon/contact'"
                         >select package</button>
                     </div>
                 </div>
@@ -532,7 +532,7 @@
                                 </h3>
                             </li>
                         </ul>
-                        <button class="transparent-white-button"  onclick="window.location.href='/contact'"
+                        <button class="transparent-white-button"  onclick="window.location.href='https://arman-aleksanyan.github.io/corpon/contact'"
                         >select package</button>
                     </div>
                 </div>
@@ -567,7 +567,7 @@
                                 </h3>
                             </li>
                         </ul>
-                        <button class="transparent-black-button"  onclick="window.location.href='/contact'"
+                        <button class="transparent-black-button"  onclick="window.location.href='https://arman-aleksanyan.github.io/corpon/contact'"
                         >select package</button>
                     </div>
                 </div>
@@ -746,7 +746,7 @@
     <div class="container">
         <div class="row">
             <div class="col-12 col-sm-4">
-                <a href="/"><img src="./img/brand-logo-2.png" alt="brand logo"></a>
+                <a href="https://arman-aleksanyan.github.io/corpon/"><img src="./img/brand-logo-2.png" alt="brand logo"></a>
                 <p class="section-info">
                     With a community of over 400 million users (and a majority age group being 18 to 29), wouldn’t you
                     want to make sure you’re monitoring what people are posting on social networks?
@@ -789,32 +789,32 @@
                     Quick Links
                 </h6>
                 <ul class="list-unstyled">
-                    <li><a href="/">
+                    <li><a href="https://arman-aleksanyan.github.io/corpon/">
                             <p class="section-info">
                                 Home
                             </p>
                         </a></li>
-                    <li><a href="/about">
+                    <li><a href="https://arman-aleksanyan.github.io/corpon/about">
                             <p class="section-info">
                                 About
                             </p>
                         </a></li>
-                    <li><a href="/portfolio">
+                    <li><a href="https://arman-aleksanyan.github.io/corpon/portfolio">
                             <p class="section-info">
                                 Portfolio
                             </p>
                         </a></li>
-                    <li><a href="/testimonials">
+                    <li><a href="https://arman-aleksanyan.github.io/corpon/testimonials">
                             <p class="section-info">
                                 Testimonials
                             </p>
                         </a></li>
-                    <li><a href="/team">
+                    <li><a href="https://arman-aleksanyan.github.io/corpon/team">
                             <p class="section-info">
                                 Our Team
                             </p>
                         </a></li>
-                    <li><a href="/contact">
+                    <li><a href="https://arman-aleksanyan.github.io/corpon/contact">
                             <p class="section-info">
                                 Contacts
                             </p>
