--- a/portfolio.html
+++ b/portfolio.html
@@ -36,7 +36,7 @@
 </header>
 <nav class="navbar navbar-expand-lg" id="siteNav">
     <div class="container">
-        <a class="navbar-brand pl-3"><img src="./img/brand-logo.png"></a>
+        <a class="navbar-brand pl-3" href="https://arman-aleksanyan.github.io/corpon/"><img src="./img/brand-logo.png"></a>
         <div class="navbar-toggler" data-toggle="collapse" data-target="#navbarNav"
              aria-controls="navbarNav"
              aria-expanded="false"
@@ -47,12 +47,12 @@
         </div>
         <div class="collapse navbar-collapse pr-lg-3" id="navbarNav">
             <ul class="navbar-nav">
-                <li class="nav-item"><a class="nav-link" href="/">HOME</a></li>
-                <li class="nav-item"><a class="nav-link" href="/about">ABOUT</a></li>
-                <li class="nav-item"><a class="nav-link" href="/portfolio">PORTFOLIO</a></li>
-                <li class="nav-item"><a class="nav-link" href="/testimonials">TESTIMONIALS</a></li>
-                <li class="nav-item"><a class="nav-link" href="/team">OUR TEAM</a></li>
-                <li class="nav-item"><a class="nav-link" href="/contact">CONTACTS</a></li>
+                <li class="nav-item"><a class="nav-link" href="https://arman-aleksanyan.github.io/corpon/">HOME</a></li>
+                <li class="nav-item"><a class="nav-link" href="https://arman-aleksanyan.github.io/corpon/about">ABOUT</a></li>
+                <li class="nav-item"><a class="nav-link" href="https://arman-aleksanyan.github.io/corpon/portfolio">PORTFOLIO</a></li>
+                <li class="nav-item"><a class="nav-link" href="https://arman-aleksanyan.github.io/corpon/testimonials">TESTIMONIALS</a></li>
+                <li class="nav-item"><a class="nav-link" href="https://arman-aleksanyan.github.io/corpon/team">OUR TEAM</a></li>
+                <li class="nav-item"><a class="nav-link" href="https://arman-aleksanyan.github.io/corpon/contact">CONTACTS</a></li>
             </ul>
         </div>
     </div>
@@ -101,7 +101,7 @@
     <div class="container">
         <div class="row">
             <div class="col-12 col-sm-4">
-                <a href="/"><img src="./img/brand-logo-2.png" alt="brand logo"></a>
+                <a href="https://arman-aleksanyan.github.io/corpon/"><img src="./img/brand-logo-2.png" alt="brand logo"></a>
                 <p class="section-info">
                     With a community of over 400 million users (and a majority age group being 18 to 29), wouldn’t you
                     want to make sure you’re monitoring what people are posting on social networks?
@@ -144,32 +144,32 @@
                     Quick Links
                 </h6>
                 <ul class="list-unstyled">
-                    <li><a href="/">
+                    <li><a href="https://arman-aleksanyan.github.io/corpon/">
                             <p class="section-info">
                                 Home
                             </p>
                         </a></li>
-                    <li><a href="/about">
+                    <li><a href="https://arman-aleksanyan.github.io/corpon/about">
                             <p class="section-info">
                                 About
                             </p>
                         </a></li>
-                    <li><a href="/portfolio">
+                    <li><a href="https://arman-aleksanyan.github.io/corpon/portfolio">
                             <p class="section-info">
                                 Portfolio
                             </p>
                         </a></li>
-                    <li><a href="/testimonials">
+                    <li><a href="https://arman-aleksanyan.github.io/corpon/testimonials">
                             <p class="section-info">
                                 Testimonials
                             </p>
                         </a></li>
-                    <li><a href="/team">
+                    <li><a href="https://arman-aleksanyan.github.io/corpon/team">
                             <p class="section-info">
                                 Our Team
                             </p>
                         </a></li>
-                    <li><a href="/contact">
+                    <li><a href="https://arman-aleksanyan.github.io/corpon/contact">
                             <p class="section-info">
                                 Contacts
                             </p>
